objects/Contact_Email__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Email</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Email</label>
    <nameField>
        <label>Contact Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Email</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>